// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessDetailsTimelinePanel component tests Snapshot testing for completed state 1`] = `
<Card
  data-ouia-component-id="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
  data-ouia-component-type="timeline"
  data-ouia-safe={true}
>
  <ProcessInfoModal
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={null}
  />
  <CardHeader>
    <Title
      headingLevel="h3"
      size="xl"
    >
      Timeline
    </Title>
  </CardHeader>
  <CardBody>
    <Stack
      className="kogito-process-details--timeline"
      hasGutter={true}
    >
      <Split
        className="kogito-process-details--timeline-item"
        hasGutter={true}
        key="2f588da5-a323-4111-9017-3093ef9319d1"
      >
        <SplitItem>
          <Tooltip
            content="Active"
          >
            <OnRunningIcon
              className="kogito-process-details--timeline-status"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              Book flight
              <span />
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
      <Split
        className="kogito-process-details--timeline-item"
        hasGutter={true}
        key="7244ba1b-75ec-4789-8c65-499a0c5b1a6f"
      >
        <SplitItem>
          <Tooltip
            content="Something went wrong"
          >
            <ErrorCircleOIcon
              className="kogito-process-details--timeline-status"
              color="var(--pf-global--danger-color--100)"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              End Event 1
              <span>
                <Tooltip
                  content="Human task"
                >
                  <UserIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--light)"
                  />
                </Tooltip>
              </span>
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
    </Stack>
  </CardBody>
  <JobsDetailsModal
    actionType="Job Details"
    handleModalToggle={[Function]}
    isModalOpen={false}
    job={Object {}}
    modalAction={
      Array [
        <Button
          onClick={[Function]}
          variant="primary"
        >
          OK
        </Button>,
      ]
    }
    modalTitle={
      <Title
        headingLevel="h1"
        size="2xl"
      >
        <InfoCircleIcon
          className="pf-u-mr-sm"
          color="var(--pf-global--info-color--100)"
          noVerticalAlign={false}
          size="sm"
        />
        <span>
          Job Details
        </span>
      </Title>
    }
  />
  <JobsCancelModal
    actionType="Job Cancel"
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={null}
  />
</Card>
`;

exports[`ProcessDetailsTimelinePanel component tests Snapshot testing for no service url 1`] = `
<Card
  data-ouia-component-id="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
  data-ouia-component-type="timeline"
  data-ouia-safe={true}
>
  <ProcessInfoModal
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={null}
  />
  <CardHeader>
    <Title
      headingLevel="h3"
      size="xl"
    >
      Timeline
    </Title>
  </CardHeader>
  <CardBody>
    <Stack
      className="kogito-process-details--timeline"
      hasGutter={true}
    >
      <Split
        className="kogito-process-details--timeline-item"
        hasGutter={true}
        key="2f588da5-a323-4111-9017-3093ef9319d1"
      >
        <SplitItem>
          <Tooltip
            content="Active"
          >
            <OnRunningIcon
              className="kogito-process-details--timeline-status"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              Book flight
              <span />
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
      <Split
        className="kogito-process-details--timeline-item"
        hasGutter={true}
        key="6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2"
      >
        <SplitItem>
          <Tooltip
            content="Active"
          >
            <OnRunningIcon
              className="kogito-process-details--timeline-status"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              StartProcess
              <span>
                <Tooltip
                  content="Human task"
                >
                  <UserIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--light)"
                  />
                </Tooltip>
              </span>
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
      <Split
        className="kogito-process-details--timeline-item"
        hasGutter={true}
        key="7244ba1b-75ec-4789-8c65-499a0c5b1a6f"
      >
        <SplitItem>
          <Tooltip
            content="Something went wrong"
          >
            <ErrorCircleOIcon
              className="kogito-process-details--timeline-status"
              color="var(--pf-global--danger-color--100)"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              End Event 1
              <span>
                <Tooltip
                  content="Human task"
                >
                  <UserIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--light)"
                  />
                </Tooltip>
              </span>
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
    </Stack>
  </CardBody>
  <JobsDetailsModal
    actionType="Job Details"
    handleModalToggle={[Function]}
    isModalOpen={false}
    job={Object {}}
    modalAction={
      Array [
        <Button
          onClick={[Function]}
          variant="primary"
        >
          OK
        </Button>,
      ]
    }
    modalTitle={
      <Title
        headingLevel="h1"
        size="2xl"
      >
        <InfoCircleIcon
          className="pf-u-mr-sm"
          color="var(--pf-global--info-color--100)"
          noVerticalAlign={false}
          size="sm"
        />
        <span>
          Job Details
        </span>
      </Title>
    }
  />
  <JobsCancelModal
    actionType="Job Cancel"
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={null}
  />
</Card>
`;

exports[`ProcessDetailsTimelinePanel component tests Snapshot testing for service url available 1`] = `
<Card
  data-ouia-component-id="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
  data-ouia-component-type="timeline"
  data-ouia-safe={true}
>
  <ProcessInfoModal
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={null}
  />
  <CardHeader>
    <Title
      headingLevel="h3"
      size="xl"
    >
      Timeline
    </Title>
  </CardHeader>
  <CardBody>
    <Stack
      className="kogito-process-details--timeline"
      hasGutter={true}
    >
      <Split
        className="kogito-process-details--timeline-item"
        hasGutter={true}
        key="69e0a0f5-2360-4174-a8f8-a892a31fc2f9"
      >
        <SplitItem>
          <Tooltip
            content="Something went wrong"
          >
            <ErrorCircleOIcon
              className="kogito-process-details--timeline-status"
              color="var(--pf-global--danger-color--100)"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              Confirm travel
              <span>
                <Tooltip
                  content="Human task"
                >
                  <UserIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--light)"
                  />
                </Tooltip>
                <Tooltip
                  content="Node has job"
                  key="0"
                >
                  <OutlinedClockIcon
                    className="pf-u-ml-sm"
                    color="var(--pf-global--icon--Color--dark)"
                    onClick={[Function]}
                  />
                </Tooltip>
              </span>
              <Text
                component="small"
              >
                <t
                  ago={false}
                  calendar={false}
                  decimal={false}
                  element={null}
                  filter={[Function]}
                  fromNow={true}
                  interval={60000}
                  local={false}
                  onChange={[Function]}
                  titleFormat=""
                  toNow={false}
                  unit={null}
                  unix={false}
                  utc={false}
                  withTitle={false}
                >
                  <Component />
                </t>
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem>
          <Dropdown
            dropdownItems={
              Array [
                <DropdownItem
                  component="button"
                  onClick={[Function]}
                >
                  Retry
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  onClick={[Function]}
                >
                  Skip
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  id="job-details"
                  onClick={[Function]}
                >
                  Job Details
                </DropdownItem>,
              ]
            }
            isOpen={false}
            isPlain={true}
            onSelect={[Function]}
            position="right"
            toggle={
              <KebabToggle
                id="timeline-kebab-toggle-0"
                onToggle={[Function]}
              />
            }
          />
        </SplitItem>
      </Split>
      <Split
        className="kogito-process-details--timeline-item"
        hasGutter={true}
        key="69e0a0f5-2360-4174-a8f8-a892a31fc2f9r25e"
      >
        <SplitItem>
          <Tooltip
            content="Something went wrong"
          >
            <ErrorCircleOIcon
              className="kogito-process-details--timeline-status"
              color="var(--pf-global--danger-color--100)"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              Confirm travel
              <span />
              <Text
                component="small"
              >
                <t
                  ago={false}
                  calendar={false}
                  decimal={false}
                  element={null}
                  filter={[Function]}
                  fromNow={true}
                  interval={60000}
                  local={false}
                  onChange={[Function]}
                  titleFormat=""
                  toNow={false}
                  unit={null}
                  unix={false}
                  utc={false}
                  withTitle={false}
                >
                  <Component />
                </t>
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
      <Split
        className="kogito-process-details--timeline-item"
        hasGutter={true}
        key="2f588da5-a323-4111-9017-3093ef9319d1"
      >
        <SplitItem>
          <Tooltip
            content="Active"
          >
            <OnRunningIcon
              className="kogito-process-details--timeline-status"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              Book flight
              <span />
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem>
          <Dropdown
            dropdownItems={
              Array [
                <DropdownItem
                  component="button"
                  onClick={[Function]}
                >
                  Retrigger node
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  onClick={[Function]}
                >
                  Cancel node
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  id="job-details"
                  onClick={[Function]}
                >
                  Job Details
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  id="job-reschedule"
                  onClick={[Function]}
                >
                  Job Reschedule
                </DropdownItem>,
                <DropdownItem
                  component="button"
                  id="job-cancel"
                  onClick={[Function]}
                >
                  Job Cancel
                </DropdownItem>,
              ]
            }
            isOpen={false}
            isPlain={true}
            onSelect={[Function]}
            position="right"
            toggle={
              <KebabToggle
                id="timeline-kebab-toggle-2"
                onToggle={[Function]}
              />
            }
          />
        </SplitItem>
      </Split>
      <Split
        className="kogito-process-details--timeline-item"
        hasGutter={true}
        key="7244ba1b-75ec-4789-8c65-499a0c5b1a6f"
      >
        <SplitItem>
          <Tooltip
            content="Active"
          >
            <OnRunningIcon
              className="kogito-process-details--timeline-status"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              End Event 1
              <span />
              <Text
                component="small"
              >
                Active
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
      <Split
        className="kogito-process-details--timeline-item"
        hasGutter={true}
        key="6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2"
      >
        <SplitItem>
          <Tooltip
            content="Completed"
          >
            <CheckCircleIcon
              className="kogito-process-details--timeline-status"
              color="var(--pf-global--success-color--100)"
            />
          </Tooltip>
        </SplitItem>
        <SplitItem
          isFilled={true}
        >
          <TextContent>
            <Text
              component="p"
            >
              StartProcess
              <span />
              <Text
                component="small"
              >
                <t
                  ago={false}
                  calendar={false}
                  decimal={false}
                  element={null}
                  filter={[Function]}
                  fromNow={true}
                  interval={60000}
                  local={false}
                  onChange={[Function]}
                  titleFormat=""
                  toNow={false}
                  unit={null}
                  unix={false}
                  utc={false}
                  withTitle={false}
                >
                  <Component />
                </t>
              </Text>
            </Text>
          </TextContent>
        </SplitItem>
        <SplitItem />
      </Split>
    </Stack>
  </CardBody>
  <JobsDetailsModal
    actionType="Job Details"
    handleModalToggle={[Function]}
    isModalOpen={false}
    job={Object {}}
    modalAction={
      Array [
        <Button
          onClick={[Function]}
          variant="primary"
        >
          OK
        </Button>,
      ]
    }
    modalTitle={
      <Title
        headingLevel="h1"
        size="2xl"
      >
        <InfoCircleIcon
          className="pf-u-mr-sm"
          color="var(--pf-global--info-color--100)"
          noVerticalAlign={false}
          size="sm"
        />
        <span>
          Job Details
        </span>
      </Title>
    }
  />
  <JobsCancelModal
    actionType="Job Cancel"
    handleModalToggle={[Function]}
    isModalOpen={false}
    modalContent=""
    modalTitle={null}
  />
</Card>
`;

exports[`ProcessDetailsTimelinePanel component tests test job actions on nodes test options when there are no jobs 1`] = `
<ProcessDetailsTimelinePanel
  data={
    Object {
      "addons": Array [
        "jobs-management",
        "prometheus-monitoring",
        "process-management",
      ],
      "childProcessInstances": Array [],
      "end": null,
      "endpoint": "http://localhost:4000",
      "error": Object {
        "message": "Something went wrong",
        "nodeDefinitionId": "abc-efg-hij",
      },
      "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
      "nodes": Array [
        Object {
          "definitionId": "abc-efg-hij",
          "enter": 2019-10-22T04:43:01.144Z,
          "exit": null,
          "id": "7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
          "name": "End Event 1",
          "nodeId": "123-456-789",
          "type": "HumanTaskNode",
        },
        Object {
          "definitionId": "ServiceTask_1",
          "enter": 2019-10-22T04:43:01.144Z,
          "exit": null,
          "id": "2f588da5-a323-4111-9017-3093ef9319d1",
          "name": "Book flight",
          "nodeId": "123-456-789",
          "type": "WorkItemNode",
        },
        Object {
          "definitionId": "StartEvent_1",
          "enter": 2019-10-22T04:43:01.144Z,
          "exit": null,
          "id": "6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2",
          "name": "StartProcess",
          "nodeId": "123-456-789",
          "type": "HumanTaskNode",
        },
      ],
      "parentProcessInstance": null,
      "parentProcessInstanceId": null,
      "processId": "travels",
      "processName": "travels",
      "roles": Array [],
      "rootProcessInstanceId": null,
      "serviceUrl": null,
      "start": 2019-10-22T03:40:44.089Z,
      "state": "COMPLETED",
      "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
    }
  }
  driver={
    TestProcessDetailsDriver {
      "cancelJob": [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "callbackEndpoint": "http://localhost:8080/management/jobs/travels/instances/5c56eeff-4cbf-3313-a325-4c895e0afced/timers/6e74a570-31c8-4020-bd70-19be2cb625f3_0",
              "endpoint": "http://localhost:4000",
              "expirationTime": null,
              "id": "6e74a570-31c8-4020-bd70-19be2cb625f3_0",
              "lastUpdate": 2020-08-27T03:35:50.147Z,
              "nodeInstanceId": "2f588da5-a323-4111-9017-3093ef9319d1",
              "priority": 0,
              "processId": "travels",
              "processInstanceId": "5c56eeff-4cbf-3313-a325-4c895e0afced",
              "repeatInterval": null,
              "repeatLimit": null,
              "retries": 0,
              "rootProcessId": null,
              "scheduledId": "0",
              "status": "SCHEDULED",
            },
          ],
          Array [
            Object {
              "callbackEndpoint": "http://localhost:8080/management/jobs/travels/instances/5c56eeff-4cbf-3313-a325-4c895e0afced/timers/6e74a570-31c8-4020-bd70-19be2cb625f3_0",
              "endpoint": "http://localhost:4000",
              "expirationTime": null,
              "id": "6e74a570-31c8-4020-bd70-19be2cb625f3_0",
              "lastUpdate": 2020-08-27T03:35:50.147Z,
              "nodeInstanceId": "2f588da5-a323-4111-9017-3093ef9319d1",
              "priority": 0,
              "processId": "travels",
              "processInstanceId": "5c56eeff-4cbf-3313-a325-4c895e0afced",
              "repeatInterval": null,
              "repeatLimit": null,
              "retries": 0,
              "rootProcessId": null,
              "scheduledId": "0",
              "status": "SCHEDULED",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Promise {},
          },
          Object {
            "type": "return",
            "value": Promise {},
          },
        ],
      },
      "handleNodeInstanceCancel": [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "addons": Array [
                "jobs-management",
                "prometheus-monitoring",
                "process-management",
              ],
              "childProcessInstances": Array [],
              "end": null,
              "endpoint": "http://localhost:4000",
              "error": Object {
                "message": "Something went wrong",
                "nodeDefinitionId": "abc-efg-hij",
              },
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
              "nodes": Array [
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9r25e",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "Join",
                },
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "HumanTaskNode",
                },
                Object {
                  "definitionId": "_7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "name": "End Event 1",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "ServiceTask_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "2f588da5-a323-4111-9017-3093ef9319d1",
                  "name": "Book flight",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "StartEvent_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2",
                  "name": "StartProcess",
                  "nodeId": "123-456-789",
                  "type": "StartNode",
                },
              ],
              "parentProcessInstance": null,
              "parentProcessInstanceId": null,
              "processId": "travels",
              "processName": "travels",
              "roles": Array [],
              "rootProcessInstanceId": null,
              "serviceUrl": "http://localhost:4000",
              "start": 2019-10-22T03:40:44.089Z,
              "state": "ACTIVE",
              "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
            },
            Object {
              "definitionId": "ServiceTask_1",
              "enter": 2019-10-22T04:43:01.144Z,
              "exit": null,
              "id": "2f588da5-a323-4111-9017-3093ef9319d1",
              "name": "Book flight",
              "nodeId": "123-456-789",
              "type": "WorkItemNode",
            },
          ],
          Array [
            Object {
              "addons": Array [
                "jobs-management",
                "prometheus-monitoring",
                "process-management",
              ],
              "childProcessInstances": Array [],
              "end": null,
              "endpoint": "http://localhost:4000",
              "error": Object {
                "message": "Something went wrong",
                "nodeDefinitionId": "abc-efg-hij",
              },
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
              "nodes": Array [
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9r25e",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "Join",
                },
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "HumanTaskNode",
                },
                Object {
                  "definitionId": "_7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "name": "End Event 1",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "ServiceTask_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "2f588da5-a323-4111-9017-3093ef9319d1",
                  "name": "Book flight",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "StartEvent_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2",
                  "name": "StartProcess",
                  "nodeId": "123-456-789",
                  "type": "StartNode",
                },
              ],
              "parentProcessInstance": null,
              "parentProcessInstanceId": null,
              "processId": "travels",
              "processName": "travels",
              "roles": Array [],
              "rootProcessInstanceId": null,
              "serviceUrl": "http://localhost:4000",
              "start": 2019-10-22T03:40:44.089Z,
              "state": "ACTIVE",
              "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
            },
            Object {
              "definitionId": "ServiceTask_1",
              "enter": 2019-10-22T04:43:01.144Z,
              "exit": null,
              "id": "2f588da5-a323-4111-9017-3093ef9319d1",
              "name": "Book flight",
              "nodeId": "123-456-789",
              "type": "WorkItemNode",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Promise {},
          },
          Object {
            "type": "return",
            "value": Promise {},
          },
        ],
      },
      "handleNodeInstanceRetrigger": [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "addons": Array [
                "jobs-management",
                "prometheus-monitoring",
                "process-management",
              ],
              "childProcessInstances": Array [],
              "end": null,
              "endpoint": "http://localhost:4000",
              "error": Object {
                "message": "Something went wrong",
                "nodeDefinitionId": "abc-efg-hij",
              },
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
              "nodes": Array [
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9r25e",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "Join",
                },
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "HumanTaskNode",
                },
                Object {
                  "definitionId": "_7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "name": "End Event 1",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "ServiceTask_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "2f588da5-a323-4111-9017-3093ef9319d1",
                  "name": "Book flight",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "StartEvent_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2",
                  "name": "StartProcess",
                  "nodeId": "123-456-789",
                  "type": "StartNode",
                },
              ],
              "parentProcessInstance": null,
              "parentProcessInstanceId": null,
              "processId": "travels",
              "processName": "travels",
              "roles": Array [],
              "rootProcessInstanceId": null,
              "serviceUrl": "http://localhost:4000",
              "start": 2019-10-22T03:40:44.089Z,
              "state": "ACTIVE",
              "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
            },
            Object {
              "definitionId": "ServiceTask_1",
              "enter": 2019-10-22T04:43:01.144Z,
              "exit": null,
              "id": "2f588da5-a323-4111-9017-3093ef9319d1",
              "name": "Book flight",
              "nodeId": "123-456-789",
              "type": "WorkItemNode",
            },
          ],
          Array [
            Object {
              "addons": Array [
                "jobs-management",
                "prometheus-monitoring",
                "process-management",
              ],
              "childProcessInstances": Array [],
              "end": null,
              "endpoint": "http://localhost:4000",
              "error": Object {
                "message": "Something went wrong",
                "nodeDefinitionId": "abc-efg-hij",
              },
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
              "nodes": Array [
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9r25e",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "Join",
                },
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "HumanTaskNode",
                },
                Object {
                  "definitionId": "_7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "name": "End Event 1",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "ServiceTask_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "2f588da5-a323-4111-9017-3093ef9319d1",
                  "name": "Book flight",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "StartEvent_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2",
                  "name": "StartProcess",
                  "nodeId": "123-456-789",
                  "type": "StartNode",
                },
              ],
              "parentProcessInstance": null,
              "parentProcessInstanceId": null,
              "processId": "travels",
              "processName": "travels",
              "roles": Array [],
              "rootProcessInstanceId": null,
              "serviceUrl": "http://localhost:4000",
              "start": 2019-10-22T03:40:44.089Z,
              "state": "ACTIVE",
              "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
            },
            Object {
              "definitionId": "ServiceTask_1",
              "enter": 2019-10-22T04:43:01.144Z,
              "exit": null,
              "id": "2f588da5-a323-4111-9017-3093ef9319d1",
              "name": "Book flight",
              "nodeId": "123-456-789",
              "type": "WorkItemNode",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Promise {},
          },
          Object {
            "type": "return",
            "value": Promise {},
          },
        ],
      },
      "handleProcessRetry": [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "addons": Array [
                "jobs-management",
                "prometheus-monitoring",
                "process-management",
              ],
              "childProcessInstances": Array [],
              "end": null,
              "endpoint": "http://localhost:4000",
              "error": Object {
                "message": "Something went wrong",
                "nodeDefinitionId": "abc-efg-hij",
              },
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
              "nodes": Array [
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9r25e",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "Join",
                },
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "HumanTaskNode",
                },
                Object {
                  "definitionId": "_7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "name": "End Event 1",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "ServiceTask_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "2f588da5-a323-4111-9017-3093ef9319d1",
                  "name": "Book flight",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "StartEvent_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2",
                  "name": "StartProcess",
                  "nodeId": "123-456-789",
                  "type": "StartNode",
                },
              ],
              "parentProcessInstance": null,
              "parentProcessInstanceId": null,
              "processId": "travels",
              "processName": "travels",
              "roles": Array [],
              "rootProcessInstanceId": null,
              "serviceUrl": "http://localhost:4000",
              "start": 2019-10-22T03:40:44.089Z,
              "state": "ACTIVE",
              "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
            },
          ],
          Array [
            Object {
              "addons": Array [
                "jobs-management",
                "prometheus-monitoring",
                "process-management",
              ],
              "childProcessInstances": Array [],
              "end": null,
              "endpoint": "http://localhost:4000",
              "error": Object {
                "message": "Something went wrong",
                "nodeDefinitionId": "abc-efg-hij",
              },
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
              "nodes": Array [
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9r25e",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "Join",
                },
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "HumanTaskNode",
                },
                Object {
                  "definitionId": "_7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "name": "End Event 1",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "ServiceTask_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "2f588da5-a323-4111-9017-3093ef9319d1",
                  "name": "Book flight",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "StartEvent_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2",
                  "name": "StartProcess",
                  "nodeId": "123-456-789",
                  "type": "StartNode",
                },
              ],
              "parentProcessInstance": null,
              "parentProcessInstanceId": null,
              "processId": "travels",
              "processName": "travels",
              "roles": Array [],
              "rootProcessInstanceId": null,
              "serviceUrl": "http://localhost:4000",
              "start": 2019-10-22T03:40:44.089Z,
              "state": "ACTIVE",
              "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Promise {},
          },
          Object {
            "type": "return",
            "value": Promise {},
          },
        ],
      },
      "handleProcessSkip": [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "addons": Array [
                "jobs-management",
                "prometheus-monitoring",
                "process-management",
              ],
              "childProcessInstances": Array [],
              "end": null,
              "endpoint": "http://localhost:4000",
              "error": Object {
                "message": "Something went wrong",
                "nodeDefinitionId": "abc-efg-hij",
              },
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
              "nodes": Array [
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9r25e",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "Join",
                },
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "HumanTaskNode",
                },
                Object {
                  "definitionId": "_7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "name": "End Event 1",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "ServiceTask_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "2f588da5-a323-4111-9017-3093ef9319d1",
                  "name": "Book flight",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "StartEvent_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2",
                  "name": "StartProcess",
                  "nodeId": "123-456-789",
                  "type": "StartNode",
                },
              ],
              "parentProcessInstance": null,
              "parentProcessInstanceId": null,
              "processId": "travels",
              "processName": "travels",
              "roles": Array [],
              "rootProcessInstanceId": null,
              "serviceUrl": "http://localhost:4000",
              "start": 2019-10-22T03:40:44.089Z,
              "state": "ACTIVE",
              "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
            },
          ],
          Array [
            Object {
              "addons": Array [
                "jobs-management",
                "prometheus-monitoring",
                "process-management",
              ],
              "childProcessInstances": Array [],
              "end": null,
              "endpoint": "http://localhost:4000",
              "error": Object {
                "message": "Something went wrong",
                "nodeDefinitionId": "abc-efg-hij",
              },
              "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
              "nodes": Array [
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9r25e",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "Join",
                },
                Object {
                  "definitionId": "abc-efg-hij",
                  "enter": 2019-10-22T03:40:44.089Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "69e0a0f5-2360-4174-a8f8-a892a31fc2f9",
                  "name": "Confirm travel",
                  "nodeId": "111-555-898",
                  "type": "HumanTaskNode",
                },
                Object {
                  "definitionId": "_7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "7244ba1b-75ec-4789-8c65-499a0c5b1a6f",
                  "name": "End Event 1",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "ServiceTask_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": null,
                  "id": "2f588da5-a323-4111-9017-3093ef9319d1",
                  "name": "Book flight",
                  "nodeId": "123-456-789",
                  "type": "WorkItemNode",
                },
                Object {
                  "definitionId": "StartEvent_1",
                  "enter": 2019-10-22T04:43:01.144Z,
                  "exit": 2019-10-22T04:43:01.144Z,
                  "id": "6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2",
                  "name": "StartProcess",
                  "nodeId": "123-456-789",
                  "type": "StartNode",
                },
              ],
              "parentProcessInstance": null,
              "parentProcessInstanceId": null,
              "processId": "travels",
              "processName": "travels",
              "roles": Array [],
              "rootProcessInstanceId": null,
              "serviceUrl": "http://localhost:4000",
              "start": 2019-10-22T03:40:44.089Z,
              "state": "ACTIVE",
              "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Berlin\\",\\"country\\":\\"Germany\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Karkow\\",\\"country\\":\\"Poland\\",\\"street\\":\\"palna\\",\\"zipCode\\":\\"200300\\"},\\"email\\":\\"rob@redhat.com\\",\\"firstName\\":\\"Rob\\",\\"lastName\\":\\"Rob\\",\\"nationality\\":\\"Polish\\"}}",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Promise {},
          },
          Object {
            "type": "return",
            "value": Promise {},
          },
        ],
      },
    }
  }
  jobs={Array []}
  omittedProcessTimelineEvents={Array []}
>
  <Card
    data-ouia-component-id="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
    data-ouia-component-type="timeline"
    data-ouia-safe={true}
  >
    <article
      className="pf-c-card"
      data-ouia-component-id="OUIA-Generated-Card-14"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <ProcessInfoModal
        handleModalToggle={[Function]}
        isModalOpen={false}
        modalContent=""
        modalTitle={null}
      >
        <Modal
          actions={
            Array [
              <Button
                onClick={[Function]}
                variant="primary"
              >
                OK
              </Button>,
            ]
          }
          appendTo={[Function]}
          aria-describedby=""
          aria-label="process list modal"
          aria-labelledby="process list modal"
          className=""
          data-ouia-component-type="process-list-modal"
          data-ouia-safe={true}
          hasNoBodyWrapper={false}
          header={null}
          isOpen={false}
          onClose={[Function]}
          ouiaSafe={true}
          showClose={true}
          title=""
          titleIconVariant={null}
          titleLabel=""
          variant="small"
        >
          <Portal
            containerInfo={<div />}
          >
            <ModalContent
              actions={
                Array [
                  <Button
                    onClick={[Function]}
                    variant="primary"
                  >
                    OK
                  </Button>,
                ]
              }
              aria-describedby=""
              aria-label="process list modal"
              aria-labelledby="process list modal"
              boxId="pf-modal-part-43"
              className=""
              data-ouia-component-type="process-list-modal"
              data-ouia-safe={true}
              descriptorId="pf-modal-part-45"
              hasNoBodyWrapper={false}
              header={null}
              isOpen={false}
              labelId="pf-modal-part-44"
              onClose={[Function]}
              ouiaId="OUIA-Generated-Modal-small-31"
              ouiaSafe={true}
              showClose={true}
              title=""
              titleIconVariant={null}
              titleLabel=""
              variant="small"
            />
          </Portal>
        </Modal>
      </ProcessInfoModal>
      <CardHeader>
        <div
          className="pf-c-card__header"
        >
          <Title
            headingLevel="h3"
            size="xl"
          >
            <h3
              className="pf-c-title pf-m-xl"
              data-ouia-component-id="OUIA-Generated-Title-24"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe={true}
            >
              Timeline
            </h3>
          </Title>
        </div>
      </CardHeader>
      <CardBody>
        <div
          className="pf-c-card__body"
        >
          <Stack
            className="kogito-process-details--timeline"
            hasGutter={true}
          >
            <div
              className="pf-l-stack pf-m-gutter kogito-process-details--timeline"
            >
              <Split
                className="kogito-process-details--timeline-item"
                hasGutter={true}
                key="2f588da5-a323-4111-9017-3093ef9319d1"
              >
                <div
                  className="pf-l-split pf-m-gutter kogito-process-details--timeline-item"
                >
                  <SplitItem>
                    <div
                      className="pf-l-split__item"
                    >
                      <Tooltip
                        content="Active"
                      >
                        <Popper
                          appendTo={[Function]}
                          distance={15}
                          enableFlip={true}
                          flipBehavior={
                            Array [
                              "top",
                              "right",
                              "bottom",
                              "left",
                              "top",
                              "right",
                              "bottom",
                            ]
                          }
                          isVisible={false}
                          onBlur={[Function]}
                          onDocumentClick={false}
                          onDocumentKeyDown={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onPopperMouseEnter={[Function]}
                          onPopperMouseLeave={[Function]}
                          onTriggerEnter={[Function]}
                          placement="top"
                          popper={
                            <div
                              aria-live="off"
                              className="pf-c-tooltip"
                              id="pf-tooltip-470"
                              role="tooltip"
                              style={
                                Object {
                                  "maxWidth": null,
                                  "opacity": 0,
                                  "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                }
                              }
                            >
                              <TooltipArrow />
                              <TooltipContent
                                isLeftAligned={false}
                              >
                                Active
                              </TooltipContent>
                            </div>
                          }
                          popperMatchesTriggerWidth={false}
                          positionModifiers={
                            Object {
                              "bottom": "pf-m-bottom",
                              "bottom-end": "pf-m-bottom-right",
                              "bottom-start": "pf-m-bottom-left",
                              "left": "pf-m-left",
                              "left-end": "pf-m-left-bottom",
                              "left-start": "pf-m-left-top",
                              "right": "pf-m-right",
                              "right-end": "pf-m-right-bottom",
                              "right-start": "pf-m-right-top",
                              "top": "pf-m-top",
                              "top-end": "pf-m-top-right",
                              "top-start": "pf-m-top-left",
                            }
                          }
                          removeFindDomNode={false}
                          trigger={
                            <OnRunningIcon
                              className="kogito-process-details--timeline-status"
                            />
                          }
                          zIndex={9999}
                        >
                          <FindRefWrapper
                            onFoundRef={[Function]}
                          >
                            <OnRunningIcon
                              className="kogito-process-details--timeline-status"
                            >
                              <MockedIcon />
                            </OnRunningIcon>
                          </FindRefWrapper>
                        </Popper>
                      </Tooltip>
                    </div>
                  </SplitItem>
                  <SplitItem
                    isFilled={true}
                  >
                    <div
                      className="pf-l-split__item pf-m-fill"
                    >
                      <TextContent>
                        <div
                          className="pf-c-content"
                        >
                          <Text
                            component="p"
                          >
                            <p
                              className=""
                              data-ouia-component-id="OUIA-Generated-Text-150"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              Book flight
                              <span />
                              <Text
                                component="small"
                              >
                                <small
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-151"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  Active
                                </small>
                              </Text>
                            </p>
                          </Text>
                        </div>
                      </TextContent>
                    </div>
                  </SplitItem>
                  <SplitItem>
                    <div
                      className="pf-l-split__item"
                    />
                  </SplitItem>
                </div>
              </Split>
              <Split
                className="kogito-process-details--timeline-item"
                hasGutter={true}
                key="6ed7aa17-4bb1-48e3-b34a-5a4c5773dff2"
              >
                <div
                  className="pf-l-split pf-m-gutter kogito-process-details--timeline-item"
                >
                  <SplitItem>
                    <div
                      className="pf-l-split__item"
                    >
                      <Tooltip
                        content="Active"
                      >
                        <Popper
                          appendTo={[Function]}
                          distance={15}
                          enableFlip={true}
                          flipBehavior={
                            Array [
                              "top",
                              "right",
                              "bottom",
                              "left",
                              "top",
                              "right",
                              "bottom",
                            ]
                          }
                          isVisible={false}
                          onBlur={[Function]}
                          onDocumentClick={false}
                          onDocumentKeyDown={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onPopperMouseEnter={[Function]}
                          onPopperMouseLeave={[Function]}
                          onTriggerEnter={[Function]}
                          placement="top"
                          popper={
                            <div
                              aria-live="off"
                              className="pf-c-tooltip"
                              id="pf-tooltip-471"
                              role="tooltip"
                              style={
                                Object {
                                  "maxWidth": null,
                                  "opacity": 0,
                                  "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                }
                              }
                            >
                              <TooltipArrow />
                              <TooltipContent
                                isLeftAligned={false}
                              >
                                Active
                              </TooltipContent>
                            </div>
                          }
                          popperMatchesTriggerWidth={false}
                          positionModifiers={
                            Object {
                              "bottom": "pf-m-bottom",
                              "bottom-end": "pf-m-bottom-right",
                              "bottom-start": "pf-m-bottom-left",
                              "left": "pf-m-left",
                              "left-end": "pf-m-left-bottom",
                              "left-start": "pf-m-left-top",
                              "right": "pf-m-right",
                              "right-end": "pf-m-right-bottom",
                              "right-start": "pf-m-right-top",
                              "top": "pf-m-top",
                              "top-end": "pf-m-top-right",
                              "top-start": "pf-m-top-left",
                            }
                          }
                          removeFindDomNode={false}
                          trigger={
                            <OnRunningIcon
                              className="kogito-process-details--timeline-status"
                            />
                          }
                          zIndex={9999}
                        >
                          <FindRefWrapper
                            onFoundRef={[Function]}
                          >
                            <OnRunningIcon
                              className="kogito-process-details--timeline-status"
                            >
                              <MockedIcon />
                            </OnRunningIcon>
                          </FindRefWrapper>
                        </Popper>
                      </Tooltip>
                    </div>
                  </SplitItem>
                  <SplitItem
                    isFilled={true}
                  >
                    <div
                      className="pf-l-split__item pf-m-fill"
                    >
                      <TextContent>
                        <div
                          className="pf-c-content"
                        >
                          <Text
                            component="p"
                          >
                            <p
                              className=""
                              data-ouia-component-id="OUIA-Generated-Text-152"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              StartProcess
                              <span>
                                <Tooltip
                                  content="Human task"
                                >
                                  <Popper
                                    appendTo={[Function]}
                                    distance={15}
                                    enableFlip={true}
                                    flipBehavior={
                                      Array [
                                        "top",
                                        "right",
                                        "bottom",
                                        "left",
                                        "top",
                                        "right",
                                        "bottom",
                                      ]
                                    }
                                    isVisible={false}
                                    onBlur={[Function]}
                                    onDocumentClick={false}
                                    onDocumentKeyDown={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    onPopperMouseEnter={[Function]}
                                    onPopperMouseLeave={[Function]}
                                    onTriggerEnter={[Function]}
                                    placement="top"
                                    popper={
                                      <div
                                        aria-live="off"
                                        className="pf-c-tooltip"
                                        id="pf-tooltip-472"
                                        role="tooltip"
                                        style={
                                          Object {
                                            "maxWidth": null,
                                            "opacity": 0,
                                            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                          }
                                        }
                                      >
                                        <TooltipArrow />
                                        <TooltipContent
                                          isLeftAligned={false}
                                        >
                                          Human task
                                        </TooltipContent>
                                      </div>
                                    }
                                    popperMatchesTriggerWidth={false}
                                    positionModifiers={
                                      Object {
                                        "bottom": "pf-m-bottom",
                                        "bottom-end": "pf-m-bottom-right",
                                        "bottom-start": "pf-m-bottom-left",
                                        "left": "pf-m-left",
                                        "left-end": "pf-m-left-bottom",
                                        "left-start": "pf-m-left-top",
                                        "right": "pf-m-right",
                                        "right-end": "pf-m-right-bottom",
                                        "right-start": "pf-m-right-top",
                                        "top": "pf-m-top",
                                        "top-end": "pf-m-top-right",
                                        "top-start": "pf-m-top-left",
                                      }
                                    }
                                    removeFindDomNode={false}
                                    trigger={
                                      <UserIcon
                                        className="pf-u-ml-sm"
                                        color="var(--pf-global--icon--Color--light)"
                                      />
                                    }
                                    zIndex={9999}
                                  >
                                    <FindRefWrapper
                                      onFoundRef={[Function]}
                                    >
                                      <UserIcon
                                        className="pf-u-ml-sm"
                                        color="var(--pf-global--icon--Color--light)"
                                      >
                                        <MockedIcon />
                                      </UserIcon>
                                    </FindRefWrapper>
                                  </Popper>
                                </Tooltip>
                              </span>
                              <Text
                                component="small"
                              >
                                <small
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-153"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  Active
                                </small>
                              </Text>
                            </p>
                          </Text>
                        </div>
                      </TextContent>
                    </div>
                  </SplitItem>
                  <SplitItem>
                    <div
                      className="pf-l-split__item"
                    />
                  </SplitItem>
                </div>
              </Split>
              <Split
                className="kogito-process-details--timeline-item"
                hasGutter={true}
                key="7244ba1b-75ec-4789-8c65-499a0c5b1a6f"
              >
                <div
                  className="pf-l-split pf-m-gutter kogito-process-details--timeline-item"
                >
                  <SplitItem>
                    <div
                      className="pf-l-split__item"
                    >
                      <Tooltip
                        content="Something went wrong"
                      >
                        <Popper
                          appendTo={[Function]}
                          distance={15}
                          enableFlip={true}
                          flipBehavior={
                            Array [
                              "top",
                              "right",
                              "bottom",
                              "left",
                              "top",
                              "right",
                              "bottom",
                            ]
                          }
                          isVisible={false}
                          onBlur={[Function]}
                          onDocumentClick={false}
                          onDocumentKeyDown={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          onPopperMouseEnter={[Function]}
                          onPopperMouseLeave={[Function]}
                          onTriggerEnter={[Function]}
                          placement="top"
                          popper={
                            <div
                              aria-live="off"
                              className="pf-c-tooltip"
                              id="pf-tooltip-473"
                              role="tooltip"
                              style={
                                Object {
                                  "maxWidth": null,
                                  "opacity": 0,
                                  "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                }
                              }
                            >
                              <TooltipArrow />
                              <TooltipContent
                                isLeftAligned={false}
                              >
                                Something went wrong
                              </TooltipContent>
                            </div>
                          }
                          popperMatchesTriggerWidth={false}
                          positionModifiers={
                            Object {
                              "bottom": "pf-m-bottom",
                              "bottom-end": "pf-m-bottom-right",
                              "bottom-start": "pf-m-bottom-left",
                              "left": "pf-m-left",
                              "left-end": "pf-m-left-bottom",
                              "left-start": "pf-m-left-top",
                              "right": "pf-m-right",
                              "right-end": "pf-m-right-bottom",
                              "right-start": "pf-m-right-top",
                              "top": "pf-m-top",
                              "top-end": "pf-m-top-right",
                              "top-start": "pf-m-top-left",
                            }
                          }
                          removeFindDomNode={false}
                          trigger={
                            <ErrorCircleOIcon
                              className="kogito-process-details--timeline-status"
                              color="var(--pf-global--danger-color--100)"
                            />
                          }
                          zIndex={9999}
                        >
                          <FindRefWrapper
                            onFoundRef={[Function]}
                          >
                            <ErrorCircleOIcon
                              className="kogito-process-details--timeline-status"
                              color="var(--pf-global--danger-color--100)"
                            >
                              <MockedIcon />
                            </ErrorCircleOIcon>
                          </FindRefWrapper>
                        </Popper>
                      </Tooltip>
                    </div>
                  </SplitItem>
                  <SplitItem
                    isFilled={true}
                  >
                    <div
                      className="pf-l-split__item pf-m-fill"
                    >
                      <TextContent>
                        <div
                          className="pf-c-content"
                        >
                          <Text
                            component="p"
                          >
                            <p
                              className=""
                              data-ouia-component-id="OUIA-Generated-Text-154"
                              data-ouia-component-type="PF4/Text"
                              data-ouia-safe={true}
                              data-pf-content={true}
                            >
                              End Event 1
                              <span>
                                <Tooltip
                                  content="Human task"
                                >
                                  <Popper
                                    appendTo={[Function]}
                                    distance={15}
                                    enableFlip={true}
                                    flipBehavior={
                                      Array [
                                        "top",
                                        "right",
                                        "bottom",
                                        "left",
                                        "top",
                                        "right",
                                        "bottom",
                                      ]
                                    }
                                    isVisible={false}
                                    onBlur={[Function]}
                                    onDocumentClick={false}
                                    onDocumentKeyDown={[Function]}
                                    onFocus={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    onPopperMouseEnter={[Function]}
                                    onPopperMouseLeave={[Function]}
                                    onTriggerEnter={[Function]}
                                    placement="top"
                                    popper={
                                      <div
                                        aria-live="off"
                                        className="pf-c-tooltip"
                                        id="pf-tooltip-474"
                                        role="tooltip"
                                        style={
                                          Object {
                                            "maxWidth": null,
                                            "opacity": 0,
                                            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                          }
                                        }
                                      >
                                        <TooltipArrow />
                                        <TooltipContent
                                          isLeftAligned={false}
                                        >
                                          Human task
                                        </TooltipContent>
                                      </div>
                                    }
                                    popperMatchesTriggerWidth={false}
                                    positionModifiers={
                                      Object {
                                        "bottom": "pf-m-bottom",
                                        "bottom-end": "pf-m-bottom-right",
                                        "bottom-start": "pf-m-bottom-left",
                                        "left": "pf-m-left",
                                        "left-end": "pf-m-left-bottom",
                                        "left-start": "pf-m-left-top",
                                        "right": "pf-m-right",
                                        "right-end": "pf-m-right-bottom",
                                        "right-start": "pf-m-right-top",
                                        "top": "pf-m-top",
                                        "top-end": "pf-m-top-right",
                                        "top-start": "pf-m-top-left",
                                      }
                                    }
                                    removeFindDomNode={false}
                                    trigger={
                                      <UserIcon
                                        className="pf-u-ml-sm"
                                        color="var(--pf-global--icon--Color--light)"
                                      />
                                    }
                                    zIndex={9999}
                                  >
                                    <FindRefWrapper
                                      onFoundRef={[Function]}
                                    >
                                      <UserIcon
                                        className="pf-u-ml-sm"
                                        color="var(--pf-global--icon--Color--light)"
                                      >
                                        <MockedIcon />
                                      </UserIcon>
                                    </FindRefWrapper>
                                  </Popper>
                                </Tooltip>
                              </span>
                              <Text
                                component="small"
                              >
                                <small
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-155"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  Active
                                </small>
                              </Text>
                            </p>
                          </Text>
                        </div>
                      </TextContent>
                    </div>
                  </SplitItem>
                  <SplitItem>
                    <div
                      className="pf-l-split__item"
                    />
                  </SplitItem>
                </div>
              </Split>
            </div>
          </Stack>
        </div>
      </CardBody>
      <JobsDetailsModal
        actionType="Job Details"
        handleModalToggle={[Function]}
        isModalOpen={false}
        job={Object {}}
        modalAction={
          Array [
            <Button
              onClick={[Function]}
              variant="primary"
            >
              OK
            </Button>,
          ]
        }
        modalTitle={
          <Title
            headingLevel="h1"
            size="2xl"
          >
            <InfoCircleIcon
              className="pf-u-mr-sm"
              color="var(--pf-global--info-color--100)"
              noVerticalAlign={false}
              size="sm"
            />
            <span>
              Job Details
            </span>
          </Title>
        }
      >
        <Modal
          actions={
            Array [
              <Button
                onClick={[Function]}
                variant="primary"
              >
                OK
              </Button>,
            ]
          }
          appendTo={[Function]}
          aria-describedby=""
          aria-label="Job Detailsmodal"
          aria-labelledby="Job Detailsmodal"
          className=""
          data-ouia-component-type="job-details-modal"
          data-ouia-safe={true}
          hasNoBodyWrapper={false}
          header={
            <Title
              headingLevel="h1"
              size="2xl"
            >
              <InfoCircleIcon
                className="pf-u-mr-sm"
                color="var(--pf-global--info-color--100)"
                noVerticalAlign={false}
                size="sm"
              />
              <span>
                Job Details
              </span>
            </Title>
          }
          isOpen={false}
          onClose={[Function]}
          ouiaSafe={true}
          showClose={true}
          title=""
          titleIconVariant={null}
          titleLabel=""
          variant="large"
        >
          <Portal
            containerInfo={<div />}
          >
            <ModalContent
              actions={
                Array [
                  <Button
                    onClick={[Function]}
                    variant="primary"
                  >
                    OK
                  </Button>,
                ]
              }
              aria-describedby=""
              aria-label="Job Detailsmodal"
              aria-labelledby="Job Detailsmodal"
              boxId="pf-modal-part-44"
              className=""
              data-ouia-component-type="job-details-modal"
              data-ouia-safe={true}
              descriptorId="pf-modal-part-46"
              hasNoBodyWrapper={false}
              header={
                <Title
                  headingLevel="h1"
                  size="2xl"
                >
                  <InfoCircleIcon
                    className="pf-u-mr-sm"
                    color="var(--pf-global--info-color--100)"
                    noVerticalAlign={false}
                    size="sm"
                  />
                  <span>
                    Job Details
                  </span>
                </Title>
              }
              isOpen={false}
              labelId="pf-modal-part-45"
              onClose={[Function]}
              ouiaId="OUIA-Generated-Modal-large-14"
              ouiaSafe={true}
              showClose={true}
              title=""
              titleIconVariant={null}
              titleLabel=""
              variant="large"
            />
          </Portal>
        </Modal>
      </JobsDetailsModal>
      <JobsCancelModal
        actionType="Job Cancel"
        handleModalToggle={[Function]}
        isModalOpen={false}
        modalContent=""
        modalTitle={null}
      >
        <Modal
          actions={
            Array [
              <Button
                onClick={[Function]}
                variant="primary"
              >
                OK
              </Button>,
            ]
          }
          appendTo={[Function]}
          aria-describedby=""
          aria-label="Job Cancel Modal"
          aria-labelledby="Job Cancel Modal"
          className=""
          data-ouia-component-type="jobs-cancel-modal"
          data-ouia-safe={true}
          hasNoBodyWrapper={false}
          header={null}
          isOpen={false}
          onClose={[Function]}
          ouiaSafe={true}
          showClose={true}
          title=""
          titleIconVariant={null}
          titleLabel=""
          variant="small"
        >
          <Portal
            containerInfo={<div />}
          >
            <ModalContent
              actions={
                Array [
                  <Button
                    onClick={[Function]}
                    variant="primary"
                  >
                    OK
                  </Button>,
                ]
              }
              aria-describedby=""
              aria-label="Job Cancel Modal"
              aria-labelledby="Job Cancel Modal"
              boxId="pf-modal-part-45"
              className=""
              data-ouia-component-type="jobs-cancel-modal"
              data-ouia-safe={true}
              descriptorId="pf-modal-part-47"
              hasNoBodyWrapper={false}
              header={null}
              isOpen={false}
              labelId="pf-modal-part-46"
              onClose={[Function]}
              ouiaId="OUIA-Generated-Modal-small-32"
              ouiaSafe={true}
              showClose={true}
              title=""
              titleIconVariant={null}
              titleLabel=""
              variant="small"
            />
          </Portal>
        </Modal>
      </JobsCancelModal>
    </article>
  </Card>
</ProcessDetailsTimelinePanel>
`;
